# graduate_work

./: .gitignore  DEPLOY.md  Makefile  README copy.md  README.md  SECURITY_CHECKLIST.md
admin_pannel/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  init.sql  main.py  main_demo.py  pyproject.toml
admin_pannel/alembic/: env.py
admin_pannel/src/admin/: billing_admin.py  utils.py
admin_pannel/src/core/: config.py  database.py
admin_pannel/src/models/: billing.py
auth_api/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
auth_api/alembic/: env.py
auth_api/alembic/versions/: 7dab07183afb_add_on_delete_cascade_to_user_roles.py  f1960c065295_create_users_table.py  f463ba971c8b_add_roles_and_user_roles_tables.py  fa5212e895e1_partition_login_history_by_month.py
auth_api/src/: main.py
auth_api/src/api/v1/: auth.py  oauth_google.py  oauth_yandex.py  roles.py  user_roles.py
auth_api/src/cli/: cli.py
auth_api/src/core/: config.py  security.py  tracing.py
auth_api/src/db/: init.py  session.py  test_session.py
auth_api/src/db/models/: login_history.py  role.py  user.py
auth_api/src/middleware/: rate_limiter.py
auth_api/src/schemas/: role.py  token.py  user.py  user_role.py
auth_api/src/services/: interfaces.py  kafka_consumer.py  oauth_google.py  oauth_yandex.py  role_service.py  token_service.py  user_role_service.py  user_service.py
auth_api/src/tests/: conftest.py  pytest.ini  test_auth.py  test_login_history.py  test_roles.py  test_user_roles.py
billing_api/: .env.example  Dockerfile  README.md  alembic_billing.env.example  docker-compose.yml  main.py  pyproject.toml
billing_api/alembic/: env.py
billing_api/alembic/versions/: 66f0c3f496d8_initial_billing_tables.py
billing_api/src/: exceptions.py
billing_api/src/api/v1/: heath.py  user_subscription.py
billing_api/src/core/: auth_depends.py  config.py  gunicorn_conf.py  logger_config.py
billing_api/src/crud/: user_subscriptions.py
billing_api/src/db/: postgres.py
billing_api/src/models/: user_subscription.py
billing_api/src/schemas/: billing_event.py  payment.py  user_subscription.py
billing_api/src/services/: kafka.py  payment.py
infra/: docker-compose.yml  nginx.conf
payment_api/: .env.example  Dockerfile  README.md  alembic_pay.env.example  docker-compose.yml  main.py  pyproject.toml
payment_api/alembic/: env.py
payment_api/alembic/versions/: d3087f31b2a1_initial_payment_tables.py
payment_api/src/: exceptions.py
payment_api/src/api/v1/: heath.py  youkassa.py
payment_api/src/core/: auth_depends.py  config.py  gunicorn_conf.py
payment_api/src/crud/: payment.py
payment_api/src/db/: postgres.py
payment_api/src/models/: payment.py
payment_api/src/schemas/: yookassa_webhook_examples.py  youkassa.py
payment_api/src/services/: user_subcription.py
