[tool.poetry]
name = "admin-panel"
version = "0.1.0"
description = "Admin panel for billing system"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
sqladmin = "^0.16.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
itsdangerous = "^2.1.2"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"