[tool.poetry]
name = "payment-api"
version = "0.1.0"
description = "Payment API service"
authors = ["Yandex Practicum Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
annotated-types = "0.7.0"
anyio = "4.11.0"
certifi = "2025.10.5"
click = "8.3.0"
colorama = "0.4.6"
exceptiongroup = "1.3.0"
fastapi = "0.118.2"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
pydantic = "2.12.0"
pydantic-core = "2.41.1"

python-dotenv = "1.1.1"
python-multipart = "^0.0.6"
python-jose = "3.5.0"
sniffio = "1.3.1"
starlette = "0.48.0"
sqlalchemy = "^2.0.43"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
uvicorn = {extras = ["standard"], version = "0.37.0"}
pydantic-settings = "^2.11.0"
gunicorn = "^23.0.0"
asyncpg = "^0.30.0"
yookassa = "^3.7.1"
alembic = "1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
